--- a/.project
+++ b/.project
@@ -6,7 +6,7 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
-			<name>org.eclipse.imp.lpg.runtime.LPGBuilder</name>
+			<name>org.eclipse.imp.lpg.ide.LPGBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
